# mrmd-python

./: README.md  conformance.json  pyproject.toml  serve_mcp.py  serve_mcp_stdio.sh  serve_mcp_stdio2.sh
src/mrmd_python/: __init__.py  __main__.py  app.py  cli.py  kernel_process.py  mcp_server.py  playground.html  runtime_client.py  runtime_daemon.py  server.py  service.py  subprocess_manager.py  subprocess_worker.py  types.py  worker.py
src/rat_py/: __init__.py  __main__.py  app.py  kernel_process.py  mcp_server.py  service.py  subprocess_manager.py  subprocess_worker.py  types.py  worker.py
src/rat_py/_legacy/: __init__.py  runtime_client.py
