[project]
name = "rat-py"
version = "0.5.0"
description = "Run AnyThing: Python. MCP server for live Python execution — 3 tools, persistent state, real-time streaming."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rat contributors" }]
keywords = ["notebook", "ipython", "runtime", "mcp", "rat", "repl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "ipython>=8.0.0",
    "jedi>=0.19.0",
    "black>=25.12.0",
]

[project.optional-dependencies]
format = ["black>=24.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
rat-py = "rat_py.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rat_py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
